syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.proto";
option java_multiple_files = true;

import "BasicTypes.proto";

message ConsensusSubmitMessageTransactionBody {
    TopicID topicID = 1; // Topic to submit message to.

    bytes message = 2; // Message to be submitted. Max size of the Transaction (including signatures) is 6,144 bytes.
}
